# spatial-microckg-agent

./: .env.example  .gitignore  README.md  _fix_query_cells.py  _run_nb.py  pyproject.toml  run_pipeline.py
.github/instructions/: python-modules.instructions.md
.github/skills/function-writing/: SKILL.md
.github/skills/notebook-writing/: SKILL.md
.github/skills/project-kickoff/: SKILL.md
config/: biocypher_config.yaml  schema_config.yaml
notebooks/: 01_Data_Ingestion_QC.ipynb  01_Data_Ingestion_QC.py  02_Stabl_Feature_Selection.ipynb  02_Stabl_Feature_Selection.py  03_Spatial_Visualization.ipynb  03_Spatial_Visualization.py  04_Knowledge_Graph.ipynb  04_Knowledge_Graph.py  05_LLM_Agent.ipynb  05_LLM_Agent.py  06_Spatial_GAT.py  B01_NanoString_Ingestion_QC.ipynb  B01_NanoString_Ingestion_QC.py  B02_NanoString_Stabl_Feature_Selection.ipynb  B02_NanoString_Stabl_Feature_Selection.py  B03_NanoString_KG_LLM.ipynb  B03_NanoString_KG_LLM.py  C01_Xenium_Niche_Labeling.ipynb  C01_Xenium_Niche_Labeling.py  C02_Xenium_Stabl_Feature_Selection.ipynb  C02_Xenium_Stabl_Feature_Selection.py  C03_Xenium_GAT_Niche.ipynb  C03_Xenium_GAT_Niche.py  Takeda_Panel_Demo.ipynb
src/: __init__.py  biocypher_adapter.py  data_ingestion.py  external_knowledge.py  graph_analytics.py  llm_agent.py  nanostring_pipeline.py  spatial_analytics.py  spatial_gat.py  spatial_pipeline.py  xenium_pipeline.py
